--- a/Testando.Crud/App.config
+++ b/Testando.Crud/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="acesso_DataReader.Properties.Settings.ConnectionString"
+        connectionString="Data Source=DESKTOP-G99C339;Initial Catalog=DB.Crud;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
